fix facet scrollbar

--- a/common/styles/scss/_modal.scss
+++ b/common/styles/scss/_modal.scss
@@ -273,6 +273,7 @@ body.error-open loading-spinner {
 
     .modal-body {
         padding: 0;
+        height: 90vh;
     }
 }
 
