--- a/common/styles/scss/app.scss
+++ b/common/styles/scss/app.scss
@@ -278,13 +278,14 @@ html {
 
     // footer
     footer {
-        height: 30px;
         position: absolute;
         bottom: 0;
         right: 0;
         left: 0;
+        margin-left: -20px;
+        margin-right: -20px;
         .footer-container {
-            height: inherit;
+            height: 30px;
             background-color: #ededed;
             padding-right: 5px;
             padding-left: 5px;
